# RPG-game

./: .cursorignore  .gitignore  README.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  start.sh
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  builder.py  content.py  executor.py  finance.py  llm_client.py  marketer.py  mission_catalog.py  orchestrator.py  outreach.py  registry.py  researcher.py  scorer.py  skill_shop_catalog.py  support.py
backend/app/agents/prompts/: builder_system.txt  content_system.txt  finance_system.txt  marketer_system.txt  orchestrator_system.txt  outreach_system.txt  researcher_system.txt  support_system.txt
backend/app/agents/skills/: ad_copy_pack.md  ad_creation.md  ad_creation_app.md  ad_creation_ecommerce.md  ad_creation_expert.md  ad_creation_saas.md  ads_launch_plan.md  analytics_tracking.md  aso_optimization.md  aso_optimization_expert.md  blog_article.md  (+53 more)
backend/app/api/: deps.py
backend/app/core/: config.py  database.py  rls.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: __init__.py  api.py
backend/app/services/: ads.py  billing.py  building.py  company.py  infra.py  learnings.py  memory.py  meta_capi.py  mission.py  orchestrator.py  quest_chain.py  r2_storage.py  site_deploy.py  site_hosting.py  stripe_connect.py  task_router.py  wallet.py  website_project_generator.py  website_quality.py  website_renderer.py  website_strategy.py
backend/app/workers/: celery_app.py  runner.py
backend/tests/: test_missions.py
(+444 files in other folders)
